# tutorials

./: .gitignore
GoogleTest-example/Step_1_link_to_google_test/: CMakeLists.txt  hello_test.cpp
GoogleTest-example/Step_2_test_and_source_separated/: CMakeLists.txt
GoogleTest-example/Step_2_test_and_source_separated/src/: CMakeLists.txt  rectangle.cpp  rectangle.h
GoogleTest-example/Step_2_test_and_source_separated/test/: CMakeLists.txt  test_rectangle.cpp
GoogleTest-example/Step_3_mock_object_passed_by_parameter/src/: CMakeLists.txt  solve_api.cpp  solve_api.h  solve_problems.h
GoogleTest-example/Step_3_mock_object_passed_by_parameter/test/: CMakeLists.txt  test_solve_api.cpp
GoogleTest-example/Step_4_test_llvm_module/: CMakeLists.txt
GoogleTest-example/Step_4_test_llvm_module/src/: CMakeLists.txt
GoogleTest-example/Step_4_test_llvm_module/src/custom_pass/: CMakeLists.txt  custom_pass.cpp  custom_pass.h  custom_pass_process.h  custom_pass_process.tpp
GoogleTest-example/Step_4_test_llvm_module/test/: CMakeLists.txt  test_custom_pass.cpp
analyze_kernel_with_wllvm/: 0001-include-asm-generic-vmlinux.lds.h-tell-the-linker-sc.patch  README.md  compile_linux_v6.10.Dockerfile  docker-compose.yaml
analyze_kernel_with_wllvm/example_pass/src/: CMakeLists.txt
analyze_kernel_with_wllvm/example_pass/src/hello_llvm_pass/: CMakeLists.txt  hello_llvm_pass.cpp
analyze_kernel_with_wllvm/find_copy_from_user/: README.md
analyze_kernel_with_wllvm/find_copy_from_user/src/: CMakeLists.txt
analyze_kernel_with_wllvm/find_copy_from_user/src/analyzer/: CMakeLists.txt  analyzer.cpp
bpftrace_tutorial/: .gitignore  README.md  bfs_script.txt  file_opener  file_opener.c  trace_dentry_open.stp  trace_vfs_inodes.bt  trace_vfs_open_inodes.bt
cmake-tutorial/: .gitignore
cmake-tutorial/Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
cmake-tutorial/Step2/: CMakeLists.txt
cmake-tutorial/Step2/MathFunctions/: CMakeLists.txt
cmake-tutorial/Step3/: CMakeLists.txt
cmake-tutorial/Step3/MathFunctions/: CMakeLists.txt
cmake-tutorial/Step4/: CMakeLists.txt
cmake-tutorial/Step5/: CMakeLists.txt
cmake-tutorial/Step5/MathFunctions/: CMakeLists.txt
cmake-tutorial/Step7/MathFunctions/: CMakeLists.txt  mysqrt.cxx
cmake-tutorial/Step8/MathFunctions/: CMakeLists.txt  MakeTable.cmake  mysqrt.cxx
llvm_pass_example/: Dockerfile
llvm_pass_example/from_local_install/: CMakeLists.txt
llvm_pass_example/from_local_install/hello_llvm_pass/: CMakeLists.txt  hello_llvm_pass.cpp  hello_llvm_pass.h
llvm_pass_example/from_source/: CMakeLists.txt  README.md
llvm_pass_example/from_source/custom_hello/: CMakeLists.txt  custom_thing.cpp  custom_thing.h
llvm_pass_example/from_tarball/: CMakeLists.txt  README.md
moonshine/: find_file.sh  log_hashes.sh
statefuzz_tutorial/: difuze_env.Dockerfile  llvm_env.Dockerfile
syzkaller tutorial/: Dockerfile  docker-compose-yml  docker-compose.yml  sample-config.cfg  syzkaller.config
syzkaller tutorial/client/: Dockerfile  docker-compose.yml
syzkaller tutorial/minimal-achyb-crash-reproduction/: accesscontrol_bug.cfg
syzkaller tutorial/minimal-bug-reproduction/: README.md
syzkaller_tutorial/: docker-compose.yml  sample-config.cfg  syzkaller.config  syzkaller_kernelversion_4.13  syzkaller_kernelversion_geq_5.12.config  syzkaller_kernelversion_lessthan_5.12.config
syzkaller_tutorial/linux_build_dockerfiles/: Dockerfile_v4.11.0  Dockerfile_v5.9.11  Dockerfile_v6.17.0-rc6  docker-compose.yml
syzkaller_tutorial/minimal-achyb-crash-reproduction/: README.md  accesscontrol_bug.cfg
syzkaller_tutorial/minimal-bug-reproduction/: README.md  ptrace_bug.cfg
syzkaller_tutorial/statefuzz-crash-reproduction/: Dockerfile_v5.9.11  cover_only_drivers.cfg  docker-compose.yml  tty_calls.cfg
syzkaller_tutorial/statefuzz-crash-reproduction/CVE-2020-25669/: README.md  keyboard_sunkbd.config  syzkaller_sunkbd.config
syzkaller_tutorial/statefuzz-crash-reproduction/CVE-2020-27830/: README.md  speakup.config  syzkaller_speakup_5.9.11.config  tty_calls.cfg
syzkaller_tutorial/statefuzz-crash-reproduction/CVE-2020-28097/: linux_remote_kcov.patch  remote_kcov_v5.8.9.patch  remote_kcov_v6.17.patch  vgacon_scrolldelta-instrumentation-ablation-1.patch  vgacon_scrolldelta-instrumentation-ablation-2.patch  vgacon_scrolldelta-instrumentation.patch
syzkaller_tutorial/statefuzz-crash-reproduction/CVE-2020-28097/instrumented_results/repro_package/: linux_commit.json  syzkaller_commit.json
syzkaller_tutorial/statefuzz-crash-reproduction/CVE-2020-28097/instrumented_results/run_1/repro_package/: syzkaller.cfg
syzkaller_tutorial/statefuzz-crash-reproduction/CVE-2020-28097/instrumented_results/run_2/repro_package/: linux_commit_difference.json  linux_diff_from_ancestor.patch  syzkaller.cfg  syzkaller_diff_from_ancestor.patch
syzkaller_tutorial/statefuzz-crash-reproduction/CVE-2020-28097/instrumented_results/run_3/repro_package/: syzkaller.cfg
syzkaller_tutorial/statefuzz-crash-reproduction/CVE-2020-28097/instrumented_results/run_4/repro_package/: .config  syzkaller_commit_difference.json
syzkaller_tutorial/statefuzz-crash-reproduction/CVE-2020-28941/: README.md  speakup-staging.config  syzkaller_speakup_staging_5.9.config
syzkaller_tutorial/statefuzz-crash-reproduction/CVE-2021-31916/: README.md  blk_dev_dm.config  ctl_dm_calls.cfg  syzkaller_blk_dev_dm.config
syzkaller_tutorial/syz-manager-atomation/: config.json  invoke-syz-manager.py  test.cfg
syzkaller_tutorial/vfs-fuzz/: FIDEDUPERANGE_generated_tests.md  README.md  enable_only_fs_calls.cfg  enable_only_fs_calls_covfilter.cfg  generated_tests.md  minimal_calls_for_vfs_dedup.cfg  minimal_calls_for_vfs_dedup_covfilter.cfg  v4.19.192-syzkaller-btrfs-xfs.config
syzkaller_tutorial/vfs-fuzz/objdump/: vfs_dedupe_file_range_one-dump-v4.19.192
